--- a/css/components/forms/badge.css
+++ b/css/components/forms/badge.css
@@ -74,6 +74,4 @@
     font-size: 14px;
 }
 
-#gte-validation-results .chip-list {
-    justify-content: flex-end;
-}
+/* Видалено - використовуйте модифікатор .chip-list-end замість специфічного селектора */
